[package]
name = "stock_app_2"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["default-tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
scraper = "0.15"
regex = "1"
futures = "0.3"
json = "0.12"
chrono = "0.4.39"
yata = "0.7.0"
